--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <div class="about-wrapp">
                             <div class="curve-text">
                                 <div class="circle-text"
-                                    data-text="* welcome to carmelina luxury hotel* welcome to carmelina luxury hotel*">
+                                    data-text="* welcome to Our luxury hotel* welcome to Our luxury hotel*">
                                 </div>
                             </div>
                         </div>
